--- a/Problem3/Problem3.vcxproj
+++ b/Problem3/Problem3.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{7f3c2a92-7314-41bf-b64d-72a9c2985657}</ProjectGuid>
+    <ProjectGuid>{481aebc6-802b-4c8d-8b5b-e3bb3be6c97b}</ProjectGuid>
     <RootNamespace>Problem3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -128,6 +128,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Problem3.cpp" />
+    <ClCompile Include="Tree.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TreeADT.h" />
+    <ClInclude Include="TreeWrapper.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
